Version TBA

 * Allow copying comments from a document and pasting them elsewhere in the
   same document or into another one.

 * Fixed bounds check when clicking on nested comments in a document.

 * Added context menu when right clicking on a comment in a document.

 * Optionally highlight byte sequences which match the current selection.
   ("Highlight data matching selection" or "PatternMatchHighlight").

Version 0.1.0 (2020-03-12)

 * Initial release.